tests/ui/error-codes/E0429.stderr
error[E0429]: `self` imports are only allowed within a { } list
  --> $DIR/E0429.rs:1:13
   |
LL | use std::fmt::self;
   |             ^^^^^^
   |
help: consider importing the module directly
   |
LL - use std::fmt::self;
LL + use std::fmt;
   |
help: alternatively, use the multi-path `use` syntax to import `self`
   |
LL | use std::fmt::{self};
   |               +    +

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0429`.
