tests/ui/error-codes/E0429.rs
use std::fmt::self; //~ ERROR E0429

fn main () {
}
